<?xml version="1.0"?>
<package format="2">
  <name>path_smoothing_ros</name>
  <version>0.0.0</version>
  <description>The path_smoothing_ros package</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>

  <license>BSD</license>

  <author email="gkourosg@yahoo.gr">George Kouros</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <build_depend>std_msgs</build_depend>
<exec_depend>std_msgs</exec_depend>
<build_export_depend>std_msgs</build_export_depend>


<build_depend>message_generation</build_depend>
<exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
